--- a/form.html
+++ b/form.html
@@ -1,12 +1,5 @@
-	<img id="top" src="top.png" alt="">
-	<div id="form_container">
-	
-		<h1><a>SBOL Converter/Validator</a></h1>
-		<form id="form_1098960" class="appnitro" enctype="multipart/form-data" method="post" action="">
-					<div class="form_description">
-			<h2>SBOL Converter/Validator</h2>
-			<p></p>
-		</div>						
+
+	<div id="form_container">					
 			<ul >
 			
 					<li id="li_1" >
@@ -15,12 +8,12 @@
 			<input id="element_1" name="element_1" class="element file" type="file"/> 
 		</div>  
 		</li>		<li id="li_2" >
-		<label class="description" for="element_2">Paragraph </label>
+		<label class="description" for="element_2">Paste SBOL </label>
 		<div>
 			<textarea id="element_2" name="element_2" class="element textarea medium"></textarea> 
 		</div> 
 		</li>		<li id="li_3" >
-		<label class="description" for="element_3"> </label>
+		<label class="description" for="element_3">File Options  </label>
 		<span>
 			<input id="element_3_1" name="element_3_1" class="element checkbox" type="checkbox" value="1" />
 <label class="choice" for="element_3_1">Convert SBOL 1.1 to SBOL 2.0</label>
@@ -64,4 +57,5 @@
 			</ul>
 		</form>	
 	</div>
-	<img id="bottom" src="bottom.png" alt="">
+	
+
