--- a/form.html
+++ b/form.html
@@ -5,45 +5,45 @@
 					<li id="li_1" >
 		<label class="description" for="element_1">Upload a File </label>
 		<div>
-			<input id="element_1" name="element_1" class="element file" type="file"/> 
+			<input id="element_1" name="sbol_file" class="element file" type="file"/> 
 		</div>  
 		</li>		<li id="li_2" >
-		<label class="description" for="element_2">Paste SBOL </label>
+		<label class="description" for="pasted-sbol">Paste SBOL </label>
 		<div>
 			<textarea id="element_2" name="element_2" class="element textarea medium"></textarea> 
 		</div> 
 		</li>		<li id="li_3" >
 		<label class="description" for="element_3">File Options  </label>
 		<span>
-			<input id="element_3_1" name="element_3_1" class="element checkbox" type="checkbox" value="1" />
+			<input id="element_3_1" name="11to20" class="element checkbox" type="checkbox" value="1" />
 <label class="choice" for="element_3_1">Convert SBOL 1.1 to SBOL 2.0</label>
-<input id="element_3_2" name="element_3_2" class="element checkbox" type="checkbox" value="1" />
+<input id="element_3_2" name="gbto20" class="element checkbox" type="checkbox" value="1" />
 <label class="choice" for="element_3_2">Convert GenBank to SBOL 2.0</label>
-<input id="element_3_3" name="element_3_3" class="element checkbox" type="checkbox" value="1" />
+<input id="element_3_3" name="20togb" class="element checkbox" type="checkbox" value="1" />
 <label class="choice" for="element_3_3">Convert SBOL to GenBank</label>
 
 		</span> 
 		</li>		<li id="li_4" >
 		<label class="description" for="element_4">Conversion Options </label>
 		<span>
-			<input id="element_4_1" name="element_4_1" class="element checkbox" type="checkbox" value="1" />
-<label class="choice" for="element_4_1">First option</label>
-<input id="element_4_2" name="element_4_2" class="element checkbox" type="checkbox" value="1" />
-<label class="choice" for="element_4_2">Second option</label>
-<input id="element_4_3" name="element_4_3" class="element checkbox" type="checkbox" value="1" />
+			<input id="element_4_1" name="uriForConversion" class="element textbox" type="text" value="1" />
+<label class="choice" for="element_4_1">URI Prefix for converted objects</label>
+<input id="element_4_2" name="version" class="element checkbox" type="text" value="1" />
+<label class="choice" for="element_4_2">Version for converted objects</label>
+<input id="element_4_3" name="uriType" class="element checkbox" type="checkbox" value="1" />
 <label class="choice" for="element_4_3">Include types in URIs</label>
 
 		</span> 
 		</li>		<li id="li_5" >
 		<label class="description" for="element_5">Validation Options </label>
 		<span>
-			<input id="element_5_1" name="element_5_1" class="element checkbox" type="checkbox" value="1" />
+			<input id="element_5_1" name="noncompliant" class="element checkbox" type="checkbox" value="1" />
 <label class="choice" for="element_5_1">Allow non-compliant URIs</label>
-<input id="element_5_2" name="element_5_2" class="element checkbox" type="checkbox" value="1" />
+<input id="element_5_2" name="incomplete" class="element checkbox" type="checkbox" value="1" />
 <label class="choice" for="element_5_2">Allow incomplete SBOL document</label>
-<input id="element_5_3" name="element_5_3" class="element checkbox" type="checkbox" value="1" />
+<input id="element_5_3" name="bestPractices" class="element checkbox" type="checkbox" value="1" />
 <label class="choice" for="element_5_3">Check best practices</label>
-<input id="element_5_4" name="element_5_4" class="element checkbox" type="checkbox" value="1" />
+<input id="element_5_4" name="failOnFirst" class="element checkbox" type="checkbox" value="1" />
 <label class="choice" for="element_5_4">Fail on first error</label>
 
 		</span> 
