--- a/form.html
+++ b/form.html
@@ -26,11 +26,15 @@
 		</li>		<li id="li_4" >
 		<label class="description" for="element_4">Conversion Options </label>
 		<span>
-			<input id="element_4_1" name="uriForConversion" class="element textbox" type="text" value="1" />
-<label class="choice" for="element_4_1">URI Prefix for converted objects</label>
-<input id="element_4_2" name="version" class="element checkbox" type="text" value="1" />
-<label class="choice" for="element_4_2">Version for converted objects</label>
-<input id="element_4_3" name="uriType" class="element checkbox" type="checkbox" value="1" />
+<label for="element_4_1">URI Prefix for converted objects</label>
+<br>
+<input id="element_4_1" name="uriForConversion" class="element" type="text"/>
+<br>
+<label for="element_4_2">Version for converted objects</label>
+<br>
+<input id="element_4_2" name="version" class="element" type="text"/>
+<br><br>
+<input id="element_4_3" name="uriType" type="checkbox" value="1" />
 <label class="choice" for="element_4_3">Include types in URIs</label>
 
 		</span> 
