Connecting form and PHP

--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 
 	<div id="form_container">					
 			<ul >
-			
+			<form action="#">:w
 					<li id="li_1" >
 		<label class="description" for="element_1">Upload a File </label>
 		<div>
@@ -21,6 +21,11 @@
 <label class="choice" for="element_3_2">Convert GenBank to SBOL 2.0</label>
 <input id="element_3_3" name="20togb" class="element checkbox" type="checkbox" value="1" />
 <label class="choice" for="element_3_3">Convert SBOL to GenBank</label>
+<div style="padding-left:20px;">
+	<label class="choice" for="element_3_4">URI of ComponentDefinition to convert to GenBank</label>
+	<input id="element_3_4" name="cdUri" class="element" type="text" value="1" />
+</div>
+
 
 		</span> 
 		</li>		<li id="li_4" >
@@ -49,6 +54,10 @@
 <label class="choice" for="element_5_3">Check best practices</label>
 <input id="element_5_4" name="failOnFirst" class="element checkbox" type="checkbox" value="1" />
 <label class="choice" for="element_5_4">Fail on first error</label>
+<div style="padding-left:20px;">
+	<input id="element_5_4" name="fullStack" class="element checkbox" type="checkbox" value="1" />
+	<label class="choice" for="element_5_4">Display full stack trace of error:w</label>
+</div>
 
 		</span> 
 		</li>
