--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 
 	<div id="form_container">					
 			<ul >
-			<form action="#">:w
+			<form action="#" method="POST">
 					<li id="li_1" >
 		<label class="description" for="element_1">Upload a File </label>
 		<div>
