Hopefully finishing form

--- a/form.html
+++ b/form.html
@@ -22,8 +22,8 @@
 <input id="element_3_3" name="20togb" class="element checkbox" type="checkbox" value="1" />
 <label class="choice" for="element_3_3">Convert SBOL to GenBank</label>
 <div style="padding-left:20px;">
-	<input id="element_3_4" name="cdUri" class="element" type="text" value="1" />
-	<label class="choice" for="element_3_4">URI of ComponentDefinition to convert to GenBank</label>
+	<input id="element_3_4" name="cdUri" class="element" type="text" />
+	<label for="element_3_4">URI of ComponentDefinition to convert to GenBank</label>
 </div>
 
 
@@ -31,14 +31,10 @@
 		</li>		<li id="li_4" >
 		<label class="description" for="element_4">Conversion Options </label>
 		<span>
-<br>
 <input id="element_4_1" name="uriForConversion" class="element" type="text"/>
 <label for="element_4_1">URI Prefix for converted objects</label>
-<br>
 <input id="element_4_2" name="version" class="element" type="text"/>
 <label for="element_4_2">Version for converted objects</label>
-<br>
-<br><br>
 <input id="element_4_3" name="uriType" type="checkbox" value="1" />
 <label class="choice" for="element_4_3">Include types in URIs</label>
 
