--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 
 	<div id="form_container">					
 			<ul >
-			<form action="#" method="POST">
+			<form action="#" method="POST" enctype="multipart/form-data">
 					<li id="li_1" >
 		<label class="description" for="element_1">Upload a File </label>
 		<div>
@@ -52,7 +52,7 @@
 <label class="choice" for="element_5_4">Fail on first error</label>
 <div style="padding-left:20px;">
 	<input id="element_5_4" name="fullStack" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_5_4">Display full stack trace of error:w</label>
+	<label class="choice" for="element_5_4">Display full stack trace of error</label>
 </div>
 
 		</span> 
