Disabling based on checkboxes

--- a/form.html
+++ b/form.html
@@ -1,5 +1,20 @@
-
-	<div id="form_container">					
+<script type="text/javascript">
+function convertToGenBank(checkbox)
+{
+    if (checkbox.checked)
+    {
+        document.getElementById("element_3_4").disabled = true;
+    }
+}
+function failOnFirstError(checkbox)
+{
+    if (checkbox.checked)
+    {
+        document.getElementById("element_5_4").disabled = true;
+    }
+}
+</script>
+<div id="form_container">					
 			<ul >
 			<form action="#" method="POST" enctype="multipart/form-data">
 					<li id="li_1" >
@@ -19,7 +34,7 @@
 <label class="choice" for="element_3_1">Convert SBOL 1.1 to SBOL 2.0</label>
 <input id="element_3_2" name="gbto20" class="element checkbox" type="checkbox" value="1" />
 <label class="choice" for="element_3_2">Convert GenBank to SBOL 2.0</label>
-<input id="element_3_3" name="20togb" class="element checkbox" type="checkbox" value="1" />
+<input id="element_3_3" name="20togb" class="element checkbox" type="checkbox" value="1" onchange="convertToGenBank(this)" />
 <label class="choice" for="element_3_3">Convert SBOL to GenBank</label>
 <div style="padding-left:20px;">
 	<input id="element_3_4" name="cdUri" class="element" type="text" />
@@ -48,7 +63,7 @@
 <label class="choice" for="element_5_2">Allow incomplete SBOL document</label>
 <input id="element_5_3" name="bestPractices" class="element checkbox" type="checkbox" value="1" />
 <label class="choice" for="element_5_3">Check best practices</label>
-<input id="element_5_4" name="failOnFirst" class="element checkbox" type="checkbox" value="1" />
+<input id="element_5_4" name="failOnFirst" class="element checkbox" type="checkbox" value="1" onchange="failOnFirstError(this)" />
 <label class="choice" for="element_5_4">Fail on first error</label>
 <div style="padding-left:20px;">
 	<input id="element_5_4" name="fullStack" class="element checkbox" type="checkbox" value="1" />
@@ -66,5 +81,79 @@
 			</ul>
 		</form>	
 	</div>
-	
+Option 2: Or type in the URL to your HTML file
 
+http://www.example.com/myfile.html
+Indentation level:
+
+Force output to new window:
+
+FORMAT HTML
+
+ 
+Formatted HTML:
+<div id="form_container">
+	<ul >
+		<form action="#" method="POST" enctype="multipart/form-data">
+			<li id="li_1" >
+				<label class="description" for="element_1">Upload a File </label>
+				<div>
+					<input id="element_1" name="sbol_file" class="element file" type="file"/> 
+				</div>
+			</li>
+			<li id="li_2" >
+				<label class="description" for="pasted-sbol">Paste SBOL </label>
+				<div>
+					<textarea id="element_2" name="element_2" class="element textarea medium"></textarea> 
+				</div>
+			</li>
+			<li id="li_3" >
+				<label class="description" for="element_3">File Options  </label>
+				<span>
+					<input id="element_3_1" name="11to20" class="element checkbox" type="checkbox" value="1" />
+					<label class="choice" for="element_3_1">Convert SBOL 1.1 to SBOL 2.0</label>
+					<input id="element_3_2" name="gbto20" class="element checkbox" type="checkbox" value="1" />
+					<label class="choice" for="element_3_2">Convert GenBank to SBOL 2.0</label>
+					<input id="element_3_3" name="20togb" class="element checkbox" type="checkbox" value="1" />
+					<label class="choice" for="element_3_3">Convert SBOL to GenBank</label>
+					<div style="padding-left:20px;">
+						<input id="element_3_4" name="cdUri" class="element" type="text" />
+						<label for="element_3_4">URI of ComponentDefinition to convert to GenBank</label>
+					</div>
+				</span>
+			</li>
+			<li id="li_4" >
+				<label class="description" for="element_4">Conversion Options </label>
+				<span>
+				<input id="element_4_1" name="uriForConversion" class="element" type="text"/>
+				<label for="element_4_1">URI Prefix for converted objects</label>
+				<input id="element_4_2" name="version" class="element" type="text"/>
+				<label for="element_4_2">Version for converted objects</label>
+				<input id="element_4_3" name="uriType" type="checkbox" value="1" />
+				<label class="choice" for="element_4_3">Include types in URIs</label>
+				</span> 
+			</li>
+			<li id="li_5" >
+				<label class="description" for="element_5">Validation Options </label>
+				<span>
+					<input id="element_5_1" name="noncompliant" class="element checkbox" type="checkbox" value="1" />
+					<label class="choice" for="element_5_1">Allow non-compliant URIs</label>
+					<input id="element_5_2" name="incomplete" class="element checkbox" type="checkbox" value="1" />
+					<label class="choice" for="element_5_2">Allow incomplete SBOL document</label>
+					<input id="element_5_3" name="bestPractices" class="element checkbox" type="checkbox" value="1" />
+					<label class="choice" for="element_5_3">Check best practices</label>
+					<input id="element_5_4" name="failOnFirst" class="element checkbox" type="checkbox" value="1" />
+					<label class="choice" for="element_5_4">Fail on first error</label>
+					<div style="padding-left:20px;">
+						<input id="element_5_4" name="fullStack" class="element checkbox" type="checkbox" value="1" />
+						<label class="choice" for="element_5_4">Display full stack trace of error</label>
+					</div>
+				</span>
+			</li>
+			<li class="buttons">
+				<input type="hidden" name="form_id" value="1098960" />
+				<input id="saveForm" class="button_text" type="submit" name="submit" value="Submit" />
+			</li>
+	</ul>
+	</form>	
+</div>
