Added back button

--- a/result.html
+++ b/result.html
@@ -68,6 +68,7 @@
 					<p tal:content="structure request/result/output" />
 					<a tal:attributes="href request/outputFile" tal:condition="request/downloadCheck">Download Converted/Validated File</a>
 					<ul>
+						<button class="btn btn-primary" onclick="window.history.back()"> Back </button>	
 					</ul>
 				</div>
 				<div class="col-md-2">
