Added support for SBOL 2.0 -> 1.1

--- a/form.html
+++ b/form.html
@@ -84,6 +84,11 @@
 							</div>
 							<div class="checkbox">
 								<label>
+									<input type="checkbox" id="convertSbol20to11" name="convertSbol20to11" /> Convert SBOL 2.0 to 1.1 <img src="question.png" width="10px" title="Returns an SBOL 1.1 file" />
+								</label>
+							</div>
+							<div class="checkbox">
+								<label>
 								<input type="checkbox" id="performFileDiff" name="performFileDiff"/> Perform file difference checking <img src="question.png" width="10px" title="Performs a content-diff on the files" />
 								</label>
 							</div>
