--- a/src/validation-form/html/form.html
+++ b/src/validation-form/html/form.html
@@ -5,8 +5,8 @@
 		<meta http-equiv=X-UA-Compatible content="IE=edge">
 		<meta name=viewport content="width=device-width, initial-scale=1">
 		<title>SBOL Validator</title>
-		<link href=css/bootstrap.min.css rel=stylesheet>
-		<link href=css/style.css rel=stylesheet>
+		<link href=../css/bootstrap.min.css rel=stylesheet>
+		<link href=../css/style.css rel=stylesheet>
 	</head>
 	<body>
 		<h1 style="text-align: center"> SBOL Validator/Converter </h1>
@@ -28,14 +28,31 @@
 							<div class=tab-content>
 								<br>
 								<div class="tab-pane active" id=upload>
-									<div class=form-group>
-										<label for=primaryInputFile>
-										SBOL/GenBank/FASTA File <img src=question.png width=10px title="The main file for validation/conversion">
-										</label>
-										<input type=file id=primaryInputFile name=primaryInputFile>
-										<p class=help-block>
-											Upload an SBOL, GenBank, or FASTA file for validation/conversion.
-										</p>
+									<div class="row">
+										<div class="col-md-1"> </div>
+										<div class="col-md-5">
+											<div class=form-group>
+												<label for=primaryInputFile>
+												SBOL/GenBank/FASTA File <img src=../img/question.png width=10px title="The main file for validation/conversion">
+												</label>
+												<input type=file id=primaryInputFile name=primaryInputFile size=10>
+												<p class=help-block>
+													Upload an SBOL, GenBank, or FASTA file for validation/conversion.
+												</p>
+											</div>
+										</div>
+										<div class="col-md-1"> </div>
+										<div class="col-md-5">
+											<div class=form-group>
+												<label for=diffInputFile>
+												Comparison file <img src=../img/question.png width=10px title="The file used for comparison -- must be SBOL">
+												</label>
+												<input type=file id=diffInputFile name=diffInputFile>
+												<p class=help-block>
+													Upload an SBOL file for comparison.
+												</p>
+											</div>
+										</div>
 									</div>
 								</div>
 								<div class=tab-pane id=paste>
@@ -53,109 +70,117 @@
 							</div>
 						</div>
 						<hr>
-						<div class=form-group>
-							<label for=diffInputFile>
-							Comparison file <img src=question.png width=10px title="The file used for comparison -- must be SBOL">
-							</label>
-							<input type=file id=diffInputFile name=diffInputFile>
-							<p class=help-block>
-								Upload an SBOL file for comparison.
-							</p>
-						</div>
 						<br>
-						<label for=fileOptions>
-						<i>File Options</i>
-						</label>
-						<div class=form-group id=fileOptions>
-							<div class=radio>
-								<label>
-									<input type=radio name=output value=SBOL2 id=sbol20 checked> Output SBOL 2.0 <br>
-								</label>
+						<div class="row">
+							<div class="col-md-3 panel panel-default">
+								<div class="panel-heading">
+									<h3 class="panel-title">File Options</h3>
+								</div>
+								<div class="panel-body">
+									<div class=form-group id=fileOptions>
+										<div class=radio>
+											<label>
+												<input type=radio name=output value=SBOL2 id=sbol20 checked> Output SBOL 2.0 <br>
+											</label>
+										</div>
+										<div class=radio>
+											<label>
+												<input type=radio name=output value=SBOL1 id=sbol11> Output SBOL 1.1 <br>
+											</label>
+										</div>
+										<div class=radio>
+											<label>
+												<input type=radio name=output value=GenBank id=genbank> Output GenBank <br>
+											</label>
+										</div>
+										<div class=radio>
+											<label>
+												<input type=radio name=output value=FASTA id=fasta> Output FASTA <br>
+											</label>
+										</div>
+										<div class=checkbox>
+											<label>
+											<input type=checkbox id=performFileDiff name=performFileDiff> Perform file difference checking <img src=../img/question.png width=10px title="Performs a content-diff on the files">
+											</label>
+										</div>
+										<div class=form-group>
+											<label for=topLevelToConvert>
+											TopLevel to convert and validate <img src=../img/question.png width=10px title="Selects a specific TopLevel (and referenced objects) for validation/conversion"></label>
+											<input type=text class=form-control id=topLevelToConvert name=topLevelToConvert placeholder="TL URI">
+										</div>
+									</div>
+								</div>
 							</div>
-							<div class=radio>
-								<label>
-									<input type=radio name=output value=SBOL1 id=sbol11> Output SBOL 1.1 <br>
-								</label>
+							<div class="col-md-1"> </div>
+							<div class="col-md-4 panel panel-default">
+								<div class="panel-heading">
+									<h3 class="panel-title">Conversion Options</h3>
+								</div>
+								<div class="panel-body">
+									<div class=form-group id=conversionOptions>
+										<div class=form-group id=uriPrefixGroup>
+											<label for=uriPrefix>
+											URI prefix for converted objects <img src=../img/question.png width=10px title="Required for conversion from SBOL 1.1, GenBank, and FASTA">
+											</label>
+											<input type=text class=form-control id=uriPrefix name=uriPrefix placeholder="URI Prefix">
+										</div>
+										<div class=form-group>
+											<label for=version>
+											Version for converted objects <img src=../img/question.png width=10px title="Optional for conversion from SBOL 1.1, GenBank, and FASTA">
+											</label>
+											<input type=text class=form-control id=version name=version placeholder=Version>
+										</div>
+									</div>
+								</div>
 							</div>
-							<div class=radio>
-								<label>
-									<input type=radio name=output value=GenBank id=genbank> Output GenBank <br>
-								</label>
-							</div>
-							<div class=radio>
-								<label>
-									<input type=radio name=output value=FASTA id=fasta> Output FASTA <br>
-								</label>
-							</div>
-							<div class=checkbox>
-								<label>
-								<input type=checkbox id=performFileDiff name=performFileDiff> Perform file difference checking <img src=question.png width=10px title="Performs a content-diff on the files">
-								</label>
-							</div>
-							<div class=form-group>
-								<label for=topLevelToConvert>
-								TopLevel to convert and validate <img src=question.png width=10px title="Selects a specific TopLevel (and referenced objects) for validation/conversion"></label>
-								<input type=text class=form-control id=topLevelToConvert name=topLevelToConvert placeholder="TL URI">
+							<div class="col-md-1"> </div>
+							<div class="col-md-3 panel panel-default">
+								<div class="panel-heading">
+									<h3 class="panel-title">Validation Options</h3>
+								</div>
+								<div class="panel-body">
+									<div class=form-group id=vallidationOptionsOptions>
+										<div class=checkbox>
+											<label>
+											<input type=checkbox name=allowNonCompliantUris> Allow non-compliant URIs <img src=../img/question.png width=10px title="Allow URIs which do not match URI compliance specifications">
+											</label>
+										</div>
+										<div class=checkbox>
+											<label>
+											<input type=checkbox name=allowIncompleteDocuments> Allow incomplete documents <img src=../img/question.png width=10px title="Allow references to TopLevel objects not contained within the document.">
+											</label>
+										</div>
+										<div class=checkbox>
+											<label>
+											<input type=checkbox name=checkBestPractices> Check best practices <img src=../img/question.png width=10px title="Perform checks against the best practices for SBOL documents.">
+											</label>
+										</div>
+										<div class=checkbox>
+											<label>
+											<input type=checkbox name=failOnFirstError> Fail on first error <img src=../img/question.png width=10px title="Stop validation on first error encountered, as opposed to listing all errors found in document validation">
+											</label>
+										</div>
+										<div class=checkbox>
+											<label>
+											<input type=checkbox name=displayFullStackTrace> Display full stack trace <img src=../img/question.png width=10px title="Display the full stack trace of the first error encountered">
+											</label>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
-						<br>
-						<label for=conversionOptions>
-						<i>Conversion Options</i>
-						</label>
-						<div class=form-group id=conversionOptions>
-							<div class=form-group id=uriPrefixGroup>
-								<label for=uriPrefix>
-								URI prefix for converted objects <img src=question.png width=10px title="Required for conversion from SBOL 1.1, GenBank, and FASTA">
-								</label>
-								<input type=text class=form-control id=uriPrefix name=uriPrefix placeholder="URI Prefix">
-							</div>
-							<div class=form-group>
-								<label for=version>
-								Version for converted objects <img src=question.png width=10px title="Optional for conversion from SBOL 1.1, GenBank, and FASTA">
-								</label>
-								<input type=text class=form-control id=version name=version placeholder=Version>
-							</div>
+						<div class="row" id="submit">
+							<button type=submit class="btn btn-primary">Validate</button>
 						</div>
-						<br>
-						<label for=validationOptions>
-						<i>Validation Options</i>
-						</label>
-						<div class=form-group id=vallidationOptionsOptions>
-							<div class=checkbox>
-								<label>
-								<input type=checkbox name=allowNonCompliantUris> Allow non-compliant URIs <img src=question.png width=10px title="Allow URIs which do not match URI compliance specifications">
-								</label>
-							</div>
-							<div class=checkbox>
-								<label>
-								<input type=checkbox name=allowIncompleteDocuments> Allow incomplete documents <img src=question.png width=10px title="Allow references to TopLevel objects not contained within the document.">
-								</label>
-							</div>
-							<div class=checkbox>
-								<label>
-								<input type=checkbox name=checkBestPractices> Check best practices <img src=question.png width=10px title="Perform checks against the best practices for SBOL documents.">
-								</label>
-							</div>
-							<div class=checkbox>
-								<label>
-								<input type=checkbox name=failOnFirstError> Fail on first error <img src=question.png width=10px title="Stop validation on first error encountered, as opposed to listing all errors found in document validation">
-								</label>
-							</div>
-							<div class=checkbox>
-								<label>
-								<input type=checkbox name=displayFullStackTrace> Display full stack trace <img src=question.png width=10px title="Display the full stack trace of the first error encountered">
-								</label>
-							</div>
-						</div>
-						<button type=submit class="btn btn-default">Validate</button>
-					</form>
+						</form>
+					</div>
 				</div>
 				<div class=col-md-2>
 				</div>
 			</div>
 		</div>
-		<script src=js/jquery.min.js></script>
-		<script src=js/bootstrap.min.js></script>
-		<script src=js/scripts.js></script>
+		<script src=../js/jquery.min.js></script>
+		<script src=../js/bootstrap.min.js></script>
+		<script src=../js/scripts.js></script>
 	</body>
 </html>
