--- a/src/validation-form/html/form.html
+++ b/src/validation-form/html/form.html
@@ -245,10 +245,19 @@
 				</div>
 			</div>
 			<div class="col-md-2"></div>
-		</div><script src="../js/jquery.min.js" type="text/javascript">
-</script><script src="../js/bootstrap.min.js" type=
-"text/javascript">
-</script><script src="../js/scripts.js" type="text/javascript">
-</script>
+		</div>
+		<div id="myModal" class="modal">
+
+			<div class="modal-content">
+				<span class="close" onclick='closeModal()'>x</span>
+				<div id="result"> </div>
+			</div>
+
+		</div>
+		<script src="../js/jquery.min.js" type="text/javascript">
+		</script><script src="../js/bootstrap.min.js" type=
+		"text/javascript">
+		</script><script src="../js/scripts.js" type="text/javascript">
+		</script>
 	</body>
 </html>
