Updated libSBOLj and added issue link

--- a/src/validation-form/html/form.html
+++ b/src/validation-form/html/form.html
@@ -16,6 +16,9 @@
 		<h1 style="text-align: center">
 			SBOL Validator/Converter
 		</h1>
+		<h4 style="text-align: center">
+			<a href="https://www.github.com/SynBioDex/SBOL-Validator/issues">Issue Tracker</a>
+		</h4>
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-2">	</div>
@@ -244,7 +247,6 @@
 					</form>
 				</div>
 			</div>
-			<div class="col-md-2"></div>
 		</div>
 		<div id="myModal" class="modal">
 
