Frontend verbage changes SBOL 1.1/2.0 -> 1/2 File difference checking -> comparison

--- a/src/validation-form/html/form.html
+++ b/src/validation-form/html/form.html
@@ -119,11 +119,11 @@
 									</div>
 									<div class="checkbox">
 										<label>
-											<input type="checkbox" id="performFileDiff" name="performFileDiff" /> Perform file difference checking <img src="../img/question.png" width="10px" title="Performs a content-diff on the files" />
+											<input type="checkbox" id="performFileDiff" name="performFileDiff" /> Perform comparison <img src="../img/question.png" width="10px" title="Performs a content-diff on the files" />
 										</label>
 									</div>
 									<div class="form-group">
-										<label for="topLevelToConvert">TopLevel to convert and validate <img src="../img/question.png" width="10px" title="Selects a specific TopLevel (and referenced objects) for validation/conversion" />
+										<label for="topLevelToConvert">TopLevel to convert/validate <img src="../img/question.png" width="10px" title="Selects a specific TopLevel (and referenced objects) for validation/conversion" />
 										</label>
 										<input type="text" class="form-control" id="topLevelToConvert" name="topLevelToConvert" placeholder="TL URI" />
 									</div>
