--- a/src/validation-form/html/form.html
+++ b/src/validation-form/html/form.html
@@ -95,13 +95,13 @@
 								<div class="form-group" id="fileOptions">
 									<div class="radio">
 										<label>
-											<input type="radio" name="output" value="SBOL2" id="sbol20" checked="checked" /> Output SBOL 2.0
+											<input type="radio" name="output" value="SBOL2" id="sbol20" checked="checked" /> Output SBOL 2
 											<br />
 										</label>
 									</div>
 									<div class="radio">
 										<label>
-											<input type="radio" name="output" value="SBOL1" id="sbol11" /> Output SBOL 1.1
+											<input type="radio" name="output" value="SBOL1" id="sbol11" /> Output SBOL 1
 											<br />
 										</label>
 									</div>
@@ -123,7 +123,7 @@
 										</label>
 									</div>
 									<div class="form-group">
-										<label for="topLevelToConvert">TopLevel to convert/validate <img src="../img/question.png" width="10px" title="Selects a specific TopLevel (and referenced objects) for validation/conversion" />
+										<label for="topLevelToConvert">TopLevel to convert and validate <img src="../img/question.png" width="10px" title="Selects a specific TopLevel (and referenced objects) for validation/conversion" />
 										</label>
 										<input type="text" class="form-control" id="topLevelToConvert" name="topLevelToConvert" placeholder="TL URI" />
 									</div>
