--- a/src/validation-form/html/form.html
+++ b/src/validation-form/html/form.html
@@ -123,7 +123,7 @@
 										</label>
 									</div>
 									<div class="form-group">
-										<label for="topLevelToConvert">TopLevel to convert and validate <img src="../img/question.png" width="10px" title="Selects a specific TopLevel (and referenced objects) for validation/conversion" />
+										<label for="topLevelToConvert">TopLevel URI <img src="../img/question.png" width="10px" title="Selects a specific TopLevel (and referenced objects) for validation/conversion" />
 										</label>
 										<input type="text" class="form-control" id="topLevelToConvert" name="topLevelToConvert" placeholder="TL URI" />
 									</div>
