Added version marker to footer

--- a/src/validation-form/html/form.html
+++ b/src/validation-form/html/form.html
@@ -200,7 +200,7 @@
 	</div>
 	<footer class="footer">
 		<div class="container">
-			<p class="text-muted"><a href="http://www.async.ece.utah.edu/tools/sbol-validatorconverter">More info</a> &bull; To report any issues, or request new features, please use the <a href="https://www.github.com/SynBioDex/SBOL-Validator/issues">issue tracker</a>.</p>
+			<p class="text-muted">v1.0 &bull; <a href="http://www.async.ece.utah.edu/tools/sbol-validatorconverter">More info</a> &bull; To report any issues, or request new features, please use the <a href="https://www.github.com/SynBioDex/SBOL-Validator/issues">issue tracker</a>.</p>
 		</div>
 	</footer>
 	<div id="myModal" class="modal">
